# shishua_rs

./: Cargo.toml  README.md  build.rs  flake.nix  rustfmt.toml  test_all_versions.sh
benches/: bench.rs
src/: avx2_backend.rs  core.rs  lib.rs  neon_backend.rs  rand.rs  scalar_backend.rs  sse2_backend.rs  ssse3_backend.rs
test_c/: shishua_bindings.c
tests/: compare.rs
xtask/src/: lib.rs  main.rs
